--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -274,7 +274,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
   -c   (with -n) display channel stats every 10 seconds\n\
   -t   (with -n) use terminal to simulate dcc-chat\n\
   -m   userfile creation mode\n\
-  optional config filename (default 'egg.config')\n
+  optional config filename (default 'eggdrop.conf')\n
 
 0x701,I detect %s already running from this directory.\n
 0x702,If this is incorrect, erase the '%s'\n
@@ -382,7 +382,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0xb45,is not a known bot.
 0xb46,Link to myself?  Oh boy, Freud would have a field day.
 0xb47,That bot is already connected up.
-0xb48,No telnet port stored for
+0xb48,Invalid telnet address:port stored for
 0xb49,Linking to
 0xb4a,Can't find user for relay!
 0xb4b,Could not link to
