--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -504,3 +504,4 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0xe30,Lost ident wait telnet socket!!
 0xe31,Denied telnet: %s, No Access
 0xe32,Refused telnet connection from %s (tried using my botnetnick)
+0xe33,Lost telnet connection from %s while checking for duplicate
