--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.10 2000/01/22 23:01:55 fabian Exp $
+# $Id: core.english.lang,v 1.11 2000/01/30 17:59:52 fabian Exp $
 
 # General stuff
 0x001,Usage
@@ -254,7 +254,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0x668,From now on, you dont need to use the -m option to start the bot.\nEnjoy !!
 0x669,Telnet connection flood from %s!  Placing on ignore!
 0x66a,banned: 
-0x66b,nick flood
+0x66b,join flood
 0x66c,don't kick my friends, bud
 0x66d,...and don't come back.
 0x66e,Switching back to altnick %s
@@ -262,6 +262,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0x670,Removed exempt
 0x671,Removed invite
 0x672,NICK flood from @%s!  Banning.
+0x673,nick flood
 
 # EGG_
 0x700,Command line arguments:\n\
