--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.11 2000/01/30 17:59:52 fabian Exp $
+# $Id: core.english.lang,v 1.12 2000/02/03 22:54:16 fabian Exp $
 
 # General stuff
 0x001,Usage
@@ -145,6 +145,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0x53f,Cycling logfile %s, over max-logsize (%d)
 0x540,\nNickname.\n
 0x541,Last message repeated %d time(s).\n
+0x542,juped
 
 # IRC_
 0x600,Banned
