--- a/language/core.french.lang
+++ b/language/core.french.lang
@@ -12,7 +12,7 @@
 # arthur2@demoniak.hay-france.com ou benoit_jerome@penguinpowered.com
 # si vous voulez l'améliorer
 #
-# $Id: core.french.lang,v 1.8 2000/04/05 19:35:43 fabian Exp $
+# $Id: core.french.lang,v 1.9 2000/06/02 16:56:52 fabian Exp $
 
 
 # General stuff
@@ -62,6 +62,8 @@
 0x20D,Vous avez installé des modules, mais n'avez pas choisi de module de cryptage,\n\
 consultez s'il vous plaît le ficher de configuration initiale pour plus de renseignements.\n
 0x20E,Module filesys non chargé.
+0x20F,Module chargé: %s\t\t(avec support de la langue)
+0x210,Module changé: %s
 
 # USERF_
 0x400,Transfert de la liste utilisateurs terminé; utilisation de la liste
@@ -156,6 +158,7 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x53f,Rotation du fichier de log %s, taille maximale depassée (%d)
 0x540,\nSurnom.\n
 0x541,Dernier message repété %d fois.\n
+0x542,bloqué
 
 # IRC_
 0x600,Interdit
@@ -269,9 +272,11 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x66c,touches pas à mon pote
 0x66d,...pas la peine de revenir.
 0x66e,Retour au surnom alternatif %s
+0x66f,ne deope pas mes amis !
 0x670,Exception enlevée
 0x671,Invitation enlevée
 0x672,Avalanche de SURNOM de @%s!  Interdiction.
+0x673,avalanche de surnoms
 
 # EGG_
 0x700,Arguments de la ligne de commande:\n\
@@ -507,3 +512,4 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0xe30,Lost ident wait telnet socket!!
 0xe31,Telnet refusé: %s, aucun accès
 0xe32,Refus de la connexion telnet de %s (essai avec mon surnom botnet)
+0xe33,Connexion telnet de %s perdue pendant la vérification des doublons
