--- a/language/core.german.lang
+++ b/language/core.german.lang
@@ -6,7 +6,7 @@
 # Modified by Michael for 1.3.25.
 # Modified by rtc for 1.4.0
 #
-# $Id: core.german.lang,v 1.13 2000/06/20 21:41:22 fabian Exp $
+# $Id: core.german.lang,v 1.14 2000/08/03 21:51:33 fabian Exp $
 
 # General stuff
 0x001,Gebrauch
@@ -297,21 +297,15 @@ Baue eine Telnetverbindung zu dem Bot auf und gib 'NEW' als deinen Nickname ein.
 0x802,  (ist ein Master)
 
 0x900,Kein solcher Channel definiert
-0x901,Falscher Schluessel fuer den Channel
 0x902,* Mode Wechsel auf %s fuer nicht existierenden %s!
 0x903,Massen-deop auf %s von %s
 0x904,Massen-deop.  Ab in die Ecke.
-0x905,Falscher Bann
 0x907,Oops.   Irgendjemand hat mich dazu veranlasst %s zu betreten... schnell raus da...
 0x908,Modewechsel von schein-op auf %s!  Mache das wieder rueckgaengig...
 0x909,Missbrauch von faelschlich erhaltenen Server-ops...
 0x90a,Modewechsel von nicht-op auf %s!  Mache das wieder rueckgaengig...
 0x90b,Missbrauch eines Desync
 0x90c,Flood
-0x90d,Falscher Bann
-0x90e,Falscher Username
-0x90f,Falsche Ausnahme
-0x910,Falsche Einladung
 
 0xa00,keine ignorierten User
 0xa01,Im Moment werden ignoriert
@@ -513,3 +507,4 @@ Baue eine Telnetverbindung zu dem Bot auf und gib 'NEW' als deinen Nickname ein.
 0xe30,Ident-Socket beim Wartern auf die Antwort verloren!!
 0xe31,Telnet verweigert: %s, Kein Zugriff
 0xe32,Telnet-Verbindung von %s zurueckgewiesen (versuchte, meinen botnetnick zu benutzen)
+0xe33,Telnet-Verbindung von %s wärend Kontrolle auf Duplikat verloren
