--- a/language/core.german.lang
+++ b/language/core.german.lang
@@ -6,7 +6,7 @@
 # Modified by Michael for 1.3.25.
 # Modified by rtc for 1.4.0
 #
-# $Id: core.german.lang,v 1.15 2000/09/23 17:40:17 fabian Exp $
+# $Id: core.german.lang,v 1.16 2000/10/27 19:34:53 fabian Exp $
 
 # General stuff
 0x001,Gebrauch
@@ -156,6 +156,7 @@ Baue eine Telnetverbindung zu dem Bot auf und gib 'NEW' als deinen Nickname ein.
 0x53f,Rotiere Logdatei %s da groesser als max-logsize (%d)
 0x540,\nNickname.\n
 0x541,Die letzte Meldung wiederholte sich %d mal.\n
+0x543,Keine freien Sockets verfuegbar.
 
 # IRC_
 0x600,gebannt
