--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.17 2000/10/27 19:34:53 fabian Exp $
+# $Id: core.english.lang,v 1.18 2000/11/16 02:49:14 guppy Exp $
 
 # General stuff
 0x001,Usage
@@ -132,7 +132,7 @@ module, please consult the default config file for info.\n
 0x532,Permanent owner(s)
 0x533,WARNING! You are running eggdrop as root!
 0x534,CONFIG FILE NOT LOADED (NOT FOUND, OR ERROR)
-0x535,USER FILE NOT FOUND!  (try './eggdrop -m' to make one)
+0x535,USER FILE NOT FOUND!  (try './eggdrop -m %s' to make one)\n
 0x536,STARTING BOT IN USERFILE CREATION MODE.\n\
 Telnet to the bot and enter 'NEW' as your nickname.
 0x537,OR Go to IRC and:  /msg %s hello\n
