--- a/language/core.french.lang
+++ b/language/core.french.lang
@@ -1,7 +1,7 @@
 # core.french.lang
 #   core language messages for eggdrop
 #
-# $Id: core.french.lang,v 1.14 2000/09/23 17:40:17 fabian Exp $
+# $Id: core.french.lang,v 1.15 2000/11/16 02:49:14 guppy Exp $
 
 
 # General stuff
@@ -133,7 +133,7 @@ consultez le ficher de configuration initiale pour plus de renseignements.\n
 0x532,Proprietaire(s) permanent(s)
 0x533,ATTENTION! Vous exécutez eggdrop en tant que root!
 0x534,FICHIER DE CONFIGURATION NON CHARGE (INTROUVABLE OU ERREUR)
-0x535,LISTE UTILISATEURS NON TROUVEE!  (essayez './eggdrop -m' pour en créer une)
+0x535,LISTE UTILISATEURS NON TROUVEE!  (essayez './eggdrop -m %s' pour en créer une)\n
 0x536,DEMARRAGE DU BOT EN MODE CREATION DE LISTE UTILISATEURS.\n\
 Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x537,OU Allez sur IRC et:  /msg %s hello\n
