--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.18 2000/11/16 02:49:14 guppy Exp $
+# $Id: core.english.lang,v 1.19 2000/11/21 04:55:45 guppy Exp $
 
 # General stuff
 0x001,Usage
@@ -64,7 +64,7 @@ module, please consult the default config file for info.\n
 0x407,Corrupt user record
 0x408,Duplicate user record
 0x409,Corrupted password reset for
-0x40a,Ignored bans for channel(s):
+0x40a,Ignored masks for channel(s):
 0x40b,Writing user file...
 0x40c,ERROR writing user file.
 0x40d,ERROR writing user file to transfer.
