--- a/language/core.french.lang
+++ b/language/core.french.lang
@@ -1,7 +1,7 @@
 # core.french.lang
 #   core language messages for eggdrop
 #
-# $Id: core.french.lang,v 1.15 2000/11/16 02:49:14 guppy Exp $
+# $Id: core.french.lang,v 1.16 2000/11/29 02:52:05 guppy Exp $
 
 
 # General stuff
@@ -21,19 +21,19 @@
 0x104,Bans globaux
 0x106,Bans spécifiques au canal
 0x109,Utilisez '.bans all' pour voir la liste complète
-0x10A,Annulation du ban
+0x10a,Annulation du ban
 
 # EXEMPTS_
 0x114,Exceptions globales
 0x116,Exceptions spécifiques au canal
 0x119,Utilisez '.exempts all' pour voir la liste complète
-0x11A,Annulation de l'exception
+0x11a,Annulation de l'exception
 
 # INVITES_
 0x124,Invitations globales
 0x126,Invitations spécifiques au canal
 0x129,Utilisez '.invites all' pour voir la liste complète
-0x12A,Annulation de l'invitation
+0x12a,Annulation de l'invitation
 
 # MOD_
 0x200,Déjà chargé.
@@ -43,20 +43,18 @@
 0x205,Aucune fonction de fermeture
 0x206,Module déchargé:
 0x207,Aucun module de ce nom
-0x208,Aucune information pour le module:
 0x209,Erreur pendant le chargement du module:
-0x20A,Erreur pendant le déchargement du module:
-0x20B,Ne peut pas charger les modules
-0x20C,Module stagnant; il va y avoir perte de mémoire!
-0x20D,Vous avez installé des modules, mais n'avez pas choisi de module de cryptage,\n\
+0x20a,Erreur pendant le déchargement du module:
+0x20b,Ne peut pas charger les modules
+0x20c,Module stagnant; il va y avoir perte de mémoire!
+0x20d,Vous avez installé des modules, mais n'avez pas choisi de module de cryptage,\n\
 consultez le ficher de configuration initiale pour plus de renseignements.\n
-0x20E,Module Filesys non chargé.
-0x20F,Module chargé: %s \t\t(avec support internationnal)
+0x20e,Module Filesys non chargé.
+0x20f,Module chargé: %s \t\t(avec support internationnal)
 0x210,Module chargé: %s
 
 # USERF_
 0x400,Transfert de la liste utilisateurs terminé; liste prise en compte
-0x401,Ne peut pas ouvrir la liste utilisateurs pour relire les données du canal
 0x402,NE PEUT PAS LIRE LA NOUVELLE LISTE UTILISATEURS
 0x403,Ne peut vous envoyer la liste utilisateurs (erreur interne)
 0x404,Personne ne correspond à ces critères
@@ -83,7 +81,6 @@ consultez le ficher de configuration initiale pour plus de renseignements.\n
 0x500,a expiré
 0x501,au total
 0x502,Supprimé
-0x503,restant
 0x504,sur
 0x505,Recherche
 0x506,je laisse tomber d'abord
@@ -93,19 +90,15 @@ consultez le ficher de configuration initiale pour plus de renseignements.\n
 0x50a,Quoi? Essayez '.help'\n
 0x50b,Liaisons de commande:\n
 0x50c,Redémarrage...
-0x50d,Tentative de chargement de module sur eggdrop non modularisé.
 0x50e,Rotation des fichiers de log...
 0x50f,propriétaire
 0x510,maître
 0x511,op
 0x512,inactif
 0x513,ABSENT
-0x514,j'ignore
-0x515,non lié
 0x516,Déconnecté
 0x517,bot non valide
 0x518,Boucle détectée: déconnection
-0x519,mutuel
 0x51a,de
 0x51b,périmé
 0x51c,rejeté
@@ -115,9 +108,6 @@ consultez le ficher de configuration initiale pour plus de renseignements.\n
 0x520,Aucun fichier MOTD.
 0x521,Utilisez:
 0x522,<addresse>:<numéro de port>[/<numéro de port-relais>]
-0x523,inconnu
-0x524,Canaux
-0x525,trying-error-cause-butch-bub-is-a-weenie
 0x526,en suspens
 0x527,je ne suis pas op!
 0x528,caché
@@ -142,7 +132,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x53a,NE PEUT PAS ECRIRE DANS LE REPERTOIRE TEMPORAIRE
 0x53b,Ne peut pas recharger la liste utilisateurs!
 0x53c,La liste utilisateurs est innexistante!
-0x53d,Bots connectés
 0x53e,%B  (%E)\n\nEntrez votre surnom.\n
 0x53f,Rotation du fichier log %s, taille maximale depassée (%d)
 0x540,\nSurnom.\n
@@ -170,7 +159,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x611,présenté à %s de %s
 0x612,Vous avez un mot de passe de défini.
 0x613,Vous n'avez pas de mot de passe de défini.
-0x614,(VOUS N'AVEZ PAS DE MOT DE PASSE DE DEFINI)\n
 0x615,Vous avez déjà un mot de passe de défini.
 0x616,Employez au moins 6 caractères.
 0x617,Mot de passe défini:
@@ -181,11 +169,9 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x61c,Accès refusé.
 0x61d,Je vous reconnais là.
 0x61e,Hostmask ajouté
-0x61f,Retrait de votre adresse email.
 0x620,Actuellement:
 0x621,Maintenant:
 0x622,Pour l'enlever:
-0x623,Vous n'avez pas d'adresse email définie.
 0x624,Votre ligne de renseignements est verrouillée
 0x625,Retrait de votre ligne de renseignements sur
 0x626,Retrait de votre ligne de renseignements.
@@ -212,7 +198,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x63b,%s dit que je ne suis pas enregistré, essai du suivant.
 0x63c,Vous avez un serveur incorrect.
 0x63d,Flood de @%s!  Placement en ignorance!
-0x63e,Flood de CTCP de @%s!  Placement en ignorance!
 0x63f,Flood de JOIN de @%s!  Interdiction.
 0x640,Flood de canal de %s -- je le kick
 0x641,Essai du serveur
@@ -224,7 +209,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0x647,La file d'attente des modes est à
 0x648,La file d'attente des serveurs est à
 0x649,La file d'attente d'aide est à
-0x64a,Ce bot tourne sans interaction IRC.
 0x64b,Non actif sur le canal
 0x64c,Traitement du canal
 0x64d,Canal
@@ -313,7 +297,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0xb1b,Membres de la party line:
 0xb1c,Bots connectés
 0xb1d,Autres personnes sur le bot
-0xb1e,Demande désuète de 'whom' de
 0xb1f,Tentative de liaison à
 0xb20,Non en ligne; note enregistrée.
 0xb21,La boite à messages est pleine, désolé.
@@ -325,7 +308,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0xb27,Ne peux me délier
 0xb28,Boucle détectée
 0xb29,Annonce de lien incorrect de
-0xb2a,Annonce de lien incorrect
 0xb2b,Reste deconnecté
 0xb2c,Lié à
 0xb2d,Lien illégal par un leaf
@@ -337,7 +319,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0xb33,Les boots distants ne sont pas autorisés.
 0xb34,Je ne peux virer le propriétaire du bot.
 0xb35,TRANSFERT DE FICHIER REJETE
-0xb36,Je n'ai pas de système de fichiers d'où prendre les fichiers.
 0xb37,Utilisateurs à travers le botnet
 0xb38,Party line
 0xb39,Canal local
@@ -365,7 +346,6 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0xb4f,Abandon de la tentative de relais à
 0xb50,Vous êtes maintenant de retour sur
 0xb51,Relais abandonné:
-0xb52,a rejoint la party line.
 0xb53,Perte de la connexion DCC avec
 0xb54,Abandon de la tentative de relais à
 0xb55,Succès!\n\nMAINTENANT CONNECTE AU BOT RELAIS
@@ -389,28 +369,11 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0xc03,Vous devez avoir défini un mot de passe.
 0xc04,DCC chat refusé (pas de mot de passe)
 0xc05,DCC chat refusé (+x mais pas de système de fichiers)
-0xc06,DCC chat refusé (système de fichiers plein)
 0xc07,Trop de personnes sont dans le système de fichier pour l'instant.
-0xc08,Réessayez plus tard.
-0xc09,Connexion tandem à %s refusée (dupliquée)
-0xc0a,Je n'accepte pas de fichiers des étrangers.
-0xc0b,DCC SEND refusé %s (aucun accès): %s!%s
 0xc0c,Désolé, trop de connexions DCC.
 0xc0d,Connexions DCC pleines: %s %s (%s!%s)
-0xc0e,Les tranferts de fichiers par DCC ne sont pas supportés.
-0xc0f,DCC send refusé de %s de la part de %s!%s
-0xc10,Les noms de fichiers ne peuvent comporter de '/'...
-0xc11,Désolé, la taille du fichier doit être incluse.
-0xc12,Ce fichier existe déjà.
-0xc13,Ne peut créer ce fichier (erreur du répertoire temporaire)
-0xc14,Ce fichier est déja en train d'être envoyé.
-0xc15,pas de taille de fichier
-0xc16,DCC send refusé %s de %s: pas de taille de fichier
-0xc17,Désolé, ce fichier est trop gros.
-0xc18,Dcc send refusé %s (%s): le fichier est trop gros
 0xc19,Echec de la connexion
 0xc1a,Echec de la connexion DCC
-0xc1b,Le système de fichiers est cassé.
 0xc1c,Entrez votre mot de passe.
 0xc1d,%s a été enlevé de force pour flood.\n
 0xc1e,-=- poof -=-\n
